# infobim-infra-stack

./: .gitignore  README.md  branch.sh  check.sh  commit.sh  ifc.sh  infobim  infobim-ifc.yaml  infobim.sh  init.sh  pyproject.toml  run.py  run.sh
check/ifc/: 03_incoming.sh  04_env_file.sh
check/infra/: 01_structure.sh  04_venv.sh  05_python_reqs.sh  requirements.txt
cli/: check.sh  help.sh  install.sh
doc/adr/: ADR-001-capability-fsm-orchestration.md  ADR-002-cli-output-strategy-ioc.md
doc/features/: list_pipes.md  list_project_units.md
doc/features/pt_br/: list_pipes.md  list_project_units.md
doc/specs/: SPEC-001-cli-runner.md  SPEC-002-execution-planner.md  SPEC-003-narrative-tui.md
ifc/: help.sh  ifc.sh  install.sh
prompt/: infobim_agent.md
prompts/: commit.md  infobim_agent.md
src/bib/adapter/capability/cli/: list_materials.py  list_pipes.py  list_project_units.py  list_sewage_pipes.py
src/bib/adapter/repository/: capability.py  parameters.py
src/bib/core/capability/: base.py  cli_strategy.py  executor.py  metadata.py  registry.py
src/capability/: metadata.py
src/lib/core/capability/: __init__.py  base.py  cli_strategy.py
src/plugin/capability/: __init__.py
src/plugin/capability/base/: __init__.py  list_materials.py  list_pipes.py  list_project_units.py  list_sewage_pipes.py
src/plugin/capability/distribution/: __init__.py  list_pipes.py  list_sewage_pipes.py
src/tui/terminal/: exit.py  ifc.py  narrative.py
src/tui/terminal/adapter/: table_view.py
src/tui/util/: path.py  selector.py  translation.py
(+25 files in other folders)
